[package]
name = "wt_afterburner"
version = "1.1.0"
authors = ["FlareFlo <crates-io@flareflo.dev>"]
edition = "2021"
description = "Wraps thrust levels for the game War Thunder"
repository = "https://github.com/Warthunder-Open-Source-Foundation/wt_afterburner"
license-file = "LICENSE"
readme = "readme.md"
homepage = "https://wt.flareflo.dev"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]